--- a/public/css/appstyle.css
+++ b/public/css/appstyle.css
@@ -6,6 +6,7 @@
 
 .unorder {
     background-color: rgba(80, 202, 206, 0.5);
+    font-size: 18;
     /* barra de navegacion y botones*/
 }
 
@@ -15,7 +16,7 @@
 .butt {
     color: #23ce6bff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18;
+    font-size: 18 !important;
     font-weight: 600;
 }
 
