--- a/public/css/appstyle.css
+++ b/public/css/appstyle.css
@@ -16,7 +16,7 @@
 .butt {
     color: #23ce6bff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18 !important;
+    font-size: 14 !important;
     font-weight: 600;
 }
 
@@ -30,6 +30,13 @@
     font-weight: lighter;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: small;
+}
+
+.desc {
+    color: black;
+    font-weight: 500;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: smaller;
 }
 
 h5 {
@@ -69,4 +76,10 @@ h5 {
     font-weight: 600;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
+}
+
+.divi {
+    background-color: red;
+    width: 500px;
+    height: 300px;
 }
