--- a/public/css/appstyle.css
+++ b/public/css/appstyle.css
@@ -3,21 +3,23 @@
 .bodys {
     background-color: #f6f8ffff;
 }
-
+/* barra de navegacion y botones*/
 .unorder {
     background-color: rgba(80, 202, 206, 0.5);
     font-size: 18;
-    /* barra de navegacion y botones*/
+  
 }
 
 
 /*link navbar*/
 
 .butt {
-    color: #23ce6bff;
+    color:#2d3246;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 14 !important;
-    font-weight: 600;
+    font-size: 16 !important;
+    font-weight: 400;
+    padding-right: 10;
+    padding-left: 10;
 }
 
 .foots {
@@ -82,4 +84,11 @@ h5 {
     background-color: red;
     width: 500px;
     height: 300px;
+}
+.nav-list{
+    list-style-type: none;
+    padding-left: 0px;
+}
+.link{
+    color:#23ce6bff;
 }
